refactored structural families from enums to static object instances
streamlined usage of one letter code, three letter code, and name to globally use uppercase three letter code
this reduces casting and instance off checks dramatically